--- a/krotify/package.json
+++ b/krotify/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "bunx --bun vite",
+		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview"
 	},
